# nnrs

./: .gitignore  Cargo.toml
src/: data.rs  main.rs
src/mlp/: cpu.rs  gpu.rs  mod.rs  network.rs  pipelines.rs
src/shaders/: bias_add.wgsl  bias_add_relu.wgsl  bias_update.wgsl  calculate_delta.wgsl  delta_calc.wgsl  error_calc.wgsl  error_update.wgsl  evaluate_error.wgsl  matmul.wgsl  matmul_op.wgsl  matmul_transposed.wgsl  softmax.wgsl  update_weights.wgsl  weights_update.wgsl
