[package]
name = "nnrs"
version = "0.1.0"
edition = "2024"

[dependencies]
# for matrix multiplications
faer = "0.24.0"
# for matrix multiplication (gpu)
wgpu = "29.0.3"
bytemuck = "1.25.0"
pollster = "0.4.0"
futures-intrusive = "0.5.0"
# for getting random starting weights
rand = "0.10.1"
# for saving trained weights
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.150"
# for the command line interface
clap = "4.6.1"
clap_derive = "4.6.1"

[features]
dev = []
print_gpu_debug = []
